# RustServingXgboost

./: .gitignore  Justfile  README.md
serve/: Cargo.toml  Dockerfile
serve/src/: main.rs
test_endpoint/: Cargo.toml
test_endpoint/src/: main.rs
train/: Dockerfile  data.py  requirements.txt  train.py
